--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="index.css" rel="stylesheet" />
+        <meta name="description" content="Digital Literacy Program Payments Module">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <title>Payments | Digital Literacy</title>
     </head>
@@ -17,7 +18,7 @@
               <h1 class="text-center m-3">
                  Payments
               </h1>
-              <div class="row p-5">
+              <div class="row p-lg-5">
                   <div class="col">
                     <svg xmlns="http://www.w3.org/2000/svg" width="300" height="300" fill="currentColor" class="bi bi-cash-coin" viewBox="0 0 16 16">
                       <path fill-rule="evenodd" d="M11 15a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm5-4a5 5 0 1 1-10 0 5 5 0 0 1 10 0z"/>
@@ -42,7 +43,7 @@
               </div>
               <div class="row m-5" id="cards">
                   <div class="col-lg-6 align-self-center">
-                    <div class="card p-5">
+                    <div class="card p-lg-5">
                       <img src="images/debit.png" class="card-img-top img-fluid" alt="Debit Card">
                       <div class="card-body">
                         <h5 class="card-title">Debit Card</h5>
@@ -53,7 +54,7 @@
                     </div>
                   </div>
                   <div class="col-lg-6 align-self-center">
-                    <div class="card p-5">
+                    <div class="card p-lg-5">
                       <img src="images/credit.jpg" class="card-img-top img-fluid" alt="Debit Card">
                       <div class="card-body">
                         <h5 class="card-title">Credit Card</h5>
@@ -66,11 +67,11 @@
               </div>
               <div class="row my-3 mx-5">
                  <div class="col">
-                  <div class="card p-5">
+                  <div class="card p-lg-5">
                     <div class="card-body">
-                      <h5 class="card-title">How to use card at store?</h5>
-                      <div class="m-5" align="center">
-                        <iframe width="620" height="315"
+                      <h5 class="card-title">How to use card at a store?</h5>
+                      <div class="ratio ratio-16x9" align="center">
+                        <iframe  title="YouTube video" allowfullscreen
                             src="https://www.youtube.com/embed/N87Du1xjb-s?start=4">
                         </iframe>
                       </div>
@@ -83,7 +84,7 @@
               </div>
               <div class="row my-2 mx-5">
                   <div class="col">
-                      <div class="card p-5">
+                      <div class="card p-lg-5">
                           <div class="card-body">
                               <h5 class="card-title">
                                 Use a Debit Card Online
@@ -119,8 +120,8 @@
               </div>
               <div class="row">
                   <div class="col">
-                      <div class="card p-5 m-5">
-                          <h4 class="card-title mb-5">What you need to use UPI</h4>
+                      <div class="card p-lg-5 m-lg-5">
+                          <h4 class="card-title mb-5">Requirements for UPI</h4>
                           <div class="card-body">
                             <div class="row mb-5">
                                <div class="col-md-4 text-center">
@@ -149,6 +150,41 @@
                       </div>
                   </div>
               </div>
-          </div>
+              <h4 class="text-center my-5">Set up UPI App</h4>
+              <div class="timeline">
+                  <div class="roadmap-container right">
+                    <div class="content">
+                      <h2>Step 1</h2>
+                      <p>Download and install the BHIM app from the Google Play Store or the Apple App Store.
+                      </p>
+                    </div>
+                  </div>
+                  <div class="roadmap-container left">
+                    <div class="content">
+                      <h2>Step 2</h2>
+                      <p> Select your preferred language.
+                      </p>
+                    </div>
+                  </div>
+                  <div class="roadmap-container right">
+                    <div class="content">
+                      <h2>Step 3</h2>
+                      <p>Select the SIM which has your mobile number registered with your bank account.</p>
+                    </div>
+                  </div>
+                  <div class="roadmap-container left">
+                    <div class="content">
+                      <h2>Step 4</h2>
+                      <p>Set up a four-digit login password. You need to enter this four-digit password to access the app.</p>
+                    </div>
+                  </div>
+                  <div class="roadmap-container right">
+                    <div class="content">
+                      <h2>Step 5</h2>
+                      <p> Select and link your bank account. Set your UPI PIN by providing the last six and expiry date of your debit card.</p>
+                    </div>
+                  </div>
+              </div> 
+        </div>
     </body>
 </html>
