Content update Internet Banking

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="index.css" rel="stylesheet" />
-        <meta name="description" content="Digital Literacy Program Payments Module">
+        <meta name="description" content="Digital Literacy Program Payments Module By MSIT IIITH">
+        <link rel="icon" href="/images/AA.png" type="image/icon type">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
         <title>Payments | Digital Literacy</title>
     </head>
     <body>
@@ -16,7 +18,7 @@
           </nav>
           <div class="container">
               <h1 class="text-center m-3">
-                 Payments
+                Digital Payments
               </h1>
               <div class="row p-lg-5">
                   <div class="col">
@@ -36,12 +38,12 @@
                           <a class="text-dark" href="#upi">Unified Payment Interphase(UPI)</a>
                         </li>
                         <li class="list-group-item">
-                          <a class="text-dark">Online Net Payments</a>
+                          <a class="text-dark"  href="#netbanking">Online Net Payments</a>
                         </li>
                     </ol>
                   </div>
               </div>
-              <div class="row m-5" id="cards">
+              <div class="row my-4" id="cards">
                   <div class="col-lg-6 align-self-center">
                     <div class="card p-lg-5">
                       <img src="images/debit.png" class="card-img-top img-fluid" alt="Debit Card">
@@ -65,7 +67,7 @@
                     </div>
                   </div>
               </div>
-              <div class="row my-3 mx-5">
+              <div class="row my-4">
                  <div class="col">
                   <div class="card p-lg-5">
                     <div class="card-body">
@@ -82,7 +84,7 @@
                   </div> 
                  </div>
               </div>
-              <div class="row my-2 mx-5">
+              <div class="row my-4">
                   <div class="col">
                       <div class="card p-lg-5">
                           <div class="card-body">
@@ -99,7 +101,7 @@
                       </div>
                   </div>
               </div>
-              <div id="upi" class="row my-5 pt-5 justify-content-center" align="center">
+              <div id="upi" class="row my-2 pt-5 justify-content-center" align="center">
                 <div class="col align-self-center">
                   <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
@@ -108,7 +110,7 @@
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
-                          <h4 class="card-title">UPI</h5>
+                          <h2 class="card-title">UPI</h2>
                         <p class="card-text text-justify">
                           UPI stands for Unified Payment Interface (UPI). It allows the transfer of money from one bank account to another instantly via one's mobile phone. Payments can be made via the app on a mobile device only. The money transfer via UPI works on a 24x7 basis.
                         </p>
@@ -120,8 +122,8 @@
               </div>
               <div class="row">
                   <div class="col">
-                      <div class="card p-lg-5 m-lg-5">
-                          <h4 class="card-title mb-5">Requirements for UPI</h4>
+                      <div class="card p-lg-5 p-md-3 m-lg-5">
+                          <h3 class="card-title mb-5">Requirements for UPI</h3>
                           <div class="card-body">
                             <div class="row mb-5">
                                <div class="col-md-4 text-center">
@@ -137,7 +139,7 @@
                             </div>  
                             <div class="row my-5">
                               <div class="col-md-4 text-center">
-                                 <img class="img-fluid" src="/images/bhim-app.png" alt="BHIM"/>
+                                <a href="https://www.npci.org.in/PDF/npci/upi/BHIM-UPI-Guidelines.pdf" target="_blank"><img class="img-fluid" src="/images/bhim-app.png" alt="BHIM"/></a>
                               </div>
                               <div class="col-md-8">
                                <p class="card-text text-justify">
@@ -150,41 +152,113 @@
                       </div>
                   </div>
               </div>
-              <h4 class="text-center my-5">Set up UPI App</h4>
+              <h3 class="text-center my-5">Set up UPI App</h3>
               <div class="timeline">
                   <div class="roadmap-container right">
                     <div class="content">
-                      <h2>Step 1</h2>
+                      <h4>Step 1</h4>
                       <p>Download and install the BHIM app from the Google Play Store or the Apple App Store.
                       </p>
                     </div>
                   </div>
                   <div class="roadmap-container left">
                     <div class="content">
-                      <h2>Step 2</h2>
+                      <h4>Step 2</h4>
                       <p> Select your preferred language.
                       </p>
                     </div>
                   </div>
                   <div class="roadmap-container right">
                     <div class="content">
-                      <h2>Step 3</h2>
+                      <h4>Step 3</h4>
                       <p>Select the SIM which has your mobile number registered with your bank account.</p>
                     </div>
                   </div>
                   <div class="roadmap-container left">
                     <div class="content">
-                      <h2>Step 4</h2>
+                      <h4>Step 4</h4>
                       <p>Set up a four-digit login password. You need to enter this four-digit password to access the app.</p>
                     </div>
                   </div>
                   <div class="roadmap-container right">
                     <div class="content">
-                      <h2>Step 5</h2>
+                      <h4>Step 5</h4>
                       <p> Select and link your bank account. Set your UPI PIN by providing the last six and expiry date of your debit card.</p>
                     </div>
                   </div>
               </div> 
+              <div class="ratio ratio-16x9 my-4" align="center">
+                <iframe  title="YouTube video" allowfullscreen
+                    src="https://www.youtube.com/embed/Tw27j2PZuDg">
+                </iframe>
+              </div>
+        </div>
+        <div id="netbanking" class="container">
+            <div class="my-2">
+                
+                <div class="card">
+                  <div class="row align-items-center px-md-5">
+                    <div class="col-md-4 align-content-center">
+                      <img src="/images/Internet banking composition.jpg" class="card-img-top img-fluid" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                      <div class="card-body"><h2 class="card-title text-center">Internet Banking</h2>
+                        <p class="card-text text-justify">Net banking is also referred to as internet banking. It is an electronic system provided by banks to their customers that allows them to access financial and non-financial banking services in minutes. The net banking system eliminates the need to physically visit the bank. Net banking allows customers to easily access a variety of banking services such as money transfers, the creation of FDs and RDs, the tracking of transactions, and so on.
+                          Any customer who has an active bank account with the bank can use internet banking or net banking. In order to use net banking, a customer must first register. After registering, he or she will be able to use the online banking services.
+                          </p>
+                        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Points to kept in mind</button>
+                        
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                 <!-- Modal -->
+                 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">To ensure security</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        When using a bank’s net banking services, keep the following points in mind. 
+                        <ol>
+                          <li>
+                              Keep the ATM/Debit card handy when activating the net banking facility, as you may require it during the net banking account activation process
+                          </li>
+                          <li>
+                              Make sure to enter the registered mobile number because the OTP for the account verification process will be sent to it
+                          </li>
+                          <li>
+                            Keep your passbook and chequebook handy in case you need to submit a CIF, branch code, account number, or other information
+                          </li>
+                          <li>
+                            Do not share account details and net banking credentials with anyone
+                          </li>
+                          <li>
+                            Create a strong password and include special characters to make it even stronger
+                          </li>
+                          <li>
+                            In case of detecting any malicious activity, connect with the bank directly
+                          </li>
+                          <li>
+                            It is advised never to share account details, passwords, net banking details or banking credentials over email, call
+                          </li>
+                          <li>
+                            Resist using public wi-fi, public computers, etc
+                          </li>
+                        </ol>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Finished</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+            </div>
+            <div class="row">
+               <img src="/images/pd.JPG" class="img-thumpnail" alt="Steps to activate net banking"/>
+            </div>
         </div>
     </body>
 </html>
