--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
               <h1 class="text-center m-3">
                 Digital Payments
               </h1>
-              <div class="row p-lg-5">
-                  <div class="col">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="300" height="300" fill="currentColor" class="bi bi-cash-coin" viewBox="0 0 16 16">
+              <div class="row p-lg-5 justify-content-center">
+                  <div class="col-md-6 text-center p-5">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-cash-coin img-fluid" viewBox="0 0 16 16">
                       <path fill-rule="evenodd" d="M11 15a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm5-4a5 5 0 1 1-10 0 5 5 0 0 1 10 0z"/>
                       <path d="M9.438 11.944c.047.596.518 1.06 1.363 1.116v.44h.375v-.443c.875-.061 1.386-.529 1.386-1.207 0-.618-.39-.936-1.09-1.1l-.296-.07v-1.2c.376.043.614.248.671.532h.658c-.047-.575-.54-1.024-1.329-1.073V8.5h-.375v.45c-.747.073-1.255.522-1.255 1.158 0 .562.378.92 1.007 1.066l.248.061v1.272c-.384-.058-.639-.27-.696-.563h-.668zm1.36-1.354c-.369-.085-.569-.26-.569-.522 0-.294.216-.514.572-.578v1.1h-.003zm.432.746c.449.104.655.272.655.569 0 .339-.257.571-.709.614v-1.195l.054.012z"/>
                       <path d="M1 0a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h4.083c.058-.344.145-.678.258-1H3a2 2 0 0 0-2-2V3a2 2 0 0 0 2-2h10a2 2 0 0 0 2 2v3.528c.38.34.717.728 1 1.154V1a1 1 0 0 0-1-1H1z"/>
                       <path d="M9.998 5.083 10 5a2 2 0 1 0-3.132 1.65 5.982 5.982 0 0 1 3.13-1.567z"/>
                     </svg>
                   </div>
-                  <div class="col">
+                  <div class="col py-5">
                     <ol class="list-group list-group-flush text-center fs-3">
                         <li class="list-group-item">
                           <a class="text-dark" href="#cards">Credit/Debit Card</a>
@@ -44,8 +44,8 @@
                   </div>
               </div>
               <div class="row my-4" id="cards">
-                  <div class="col-lg-6 align-self-center">
-                    <div class="card p-lg-5">
+                  <div class="col-lg-6 align-self-center p-5">
+                    <div class="card p-lg-2">
                       <img src="images/debit.png" class="card-img-top img-fluid" alt="Debit Card">
                       <div class="card-body">
                         <h5 class="card-title">Debit Card</h5>
@@ -55,13 +55,13 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-lg-6 align-self-center">
-                    <div class="card p-lg-5">
+                  <div class="col-lg-6 align-self-center p-5">
+                    <div class="card p-lg-2">
                       <img src="images/credit.jpg" class="card-img-top img-fluid" alt="Debit Card">
                       <div class="card-body">
                         <h5 class="card-title">Credit Card</h5>
                         <p class="card-text  text-justify">
-                          You can use a debit card for payment almost anywhere credit cards are accepted. That includes restaurants, merchants, online retailers, government organizations, and more. There are a few exceptions, but for the most part, it's as easy as swiping your debit card when you check out (or if paying online, by typing in your card number).
+                          A credit card is a financial instrument issued by banks with a pre-set credit limit. The card issuer determines the credit limit based on your credit score, credit history and your income.Once you get the credit card bill, you can repay the amount you have spent within a certain repayment period without any interest. After this grace period, interest is applied on your balance. 
                         </p>
                       </div>
                     </div>
